# meson-ui

./: .gitignore  MANIFEST.in  contributing.md  meson-ui.py  pytest.ini  readme.md  run_uitests.py  run_utests.py  setup.cfg  setup.py
.circleci/: config.yml
app/: __main__.py
app/src/main/: __init__.py  activity_manager.py  appinfo.py  appmain.py
app/src/main/mesonuilib/backends/: ibackend.py  kdevelopbackend.py  qtcreatorbackend.py  vs2010backend.py  vs2015backend.py  vs2017backend.py  vs2019backend.py  xcodebackend.py
app/src/main/mesonuilib/console/: outputexejob.py  outputformatter.py  outputprocess.py
app/src/main/mesonuilib/introspection/: imesonintro.py  mesonbenchmarks.py  mesoninfo.py  mesonintroconsts.py  mesonintromanager.py  mesonoptconsts.py  mesonoptions.py  mesonprojectinfo.py  mesontargets.py  mesontests.py
app/src/main/mesonuilib/meson/: imesoncomponent.py  mesonbuilder.py  mesonconfig.py  mesonintro.py  mesonmanager.py
app/src/main/mesonuilib/ninjabuilder/: ninjabuilder.py
app/src/main/mvc/: configuremodle.py  configuremvc.py  mesonuimodle.py  mesonuimvc.py
app/src/main/ui/: activity_conf.py  activity_info.py  activity_main.py  activity_setup.py  resource_rc.py
app/src/main/view/: conf_activity.py  info_activity.py  main_activity.py  setup_activity.py
app/src/res/: resource.qrc
app/src/res/assets/: mesonui_app_ic.icns
app/src/res/layout/: activity_conf.ui  activity_info.ui  activity_main.ui  activity_setup.ui
app/src/res/style/: meson_theme.qss
ciimage/: Dockerfile  run_install.py  run_startup.py
test-cases/02-build/: meson.build
test-cases/03-clean/prog/: meson.build
test-cases/03-clean/prog/src/: main.c
test-cases/trivial-prog/: meson.build
test-cases/trivial-prog/prog/src/: meson.build
tool/: backlog.txt  playground.py  testrun.py
