###################################################################################
#                                                                                 #
# NAME: setup.cfg                                                                 #
#                                                                                 #
# AUTHOR: Michael Brockus.                                                        #
#                                                                                 #
# CONTACT: <mailto:michael@squidfarts.com>                                        #
#                                                                                 #
# NOTICES:                                                                        #
#                                                                                 #
# License: GPLv3                                                                  #
#                                                                                 #
###################################################################################
[metadata]
url = https://github.com/michaelbadcrumble/meson-ui
keywords =
  meson-ui
  meson
  mesonbuild

license = Apache License, Version 2.0
license_file = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache License
  Natural Language :: English
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: BSD
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Build Tools
long_description = Meson-ui is a GUI app for Meson a cross-platform build system designed to be both as fast and as user friendly as possible. It supports many languages and compilers, including GCC, Clang, PGI, Intel, and Visual Studio. Its build definitions are written in a simple non-Turing complete DSL.

[options]
python_requires = >= 3.6.0
